--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,11 +1,14 @@
 body {
+    font-size: 13px;
     background: #e3e1ff;
     color: #444;
+    margin: 0;
+    padding: 0;
 }
   .container {
     width: 90%;
     max-width: 960px;
-    margin: 80px auto;
+    margin: 40px auto;
     border-radius: 20px;
     box-shadow: 2px 4px 6px rgba(28, 6, 49, 0.1);
     background: white;
@@ -13,6 +16,9 @@ body {
   .error {
     color: #ff3f80;
     font-size: 14px;
+  }
+  .text-center{
+    text-align: center;
   }
   button {
     text-decoration: none;
@@ -22,6 +28,7 @@ body {
     border: 0;
     border-radius: 20px;
     padding: 10px 20px;
+    cursor: pointer;
   }
   button:hover{
     background: #12399c;
