--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -60,3 +60,23 @@ body {
   ::-webkit-scrollbar-thumb:hover {
     background: #b30000; 
   }
+  #overlay {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0,0.5);
+    opacity: 0.9;
+  }
+  
+  #overlay div {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    text-align: center;
+  }
