--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -41,19 +41,19 @@ body {
     font-weight: bold;
   }
   ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
+    border-radius: 3px;
   }
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #6887e3; 
-    border-radius: 10px;
+    background: #12399c; 
+    border-radius: 3px;
   }
   
   /* Handle on hover */
