--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -26,8 +26,8 @@ body {
   }
   button {
     text-decoration: none;
-    background: #12399c;
-    color: white;
+    background: #12399c !important;
+    color: white !important;
     font-weight: bold;
     border: 0;
     border-radius: 20px;
@@ -35,7 +35,7 @@ body {
     cursor: pointer;
   }
   button:hover{
-    background: #09246b;
+    background: #09246b !important;
   }
   .pointer{
     cursor: pointer;
