--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -28,10 +28,9 @@ body {
     text-decoration: none;
     background: #12399c !important;
     color: white !important;
-    font-weight: bold;
     border: 0;
     border-radius: 20px;
-    padding: 10px 20px;
+    padding: 10px 20px !important;
     cursor: pointer;
   }
   button:hover{
